# OptiMCP

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: AGENT_TOOL_BENCHMARK.md  CONSISTENCY_BENCHMARK.md  agent_benchmark.py  agent_benchmark_result.json  consistency_benchmark.py  consistency_results.json  scenarios.py
examples/: always_on_loop.py  check_consistency.py  check_financial_report.py  daemon_quickstart.md  langchain_agent.py  mcp_config.json  middleware_openai.py  openai_function_calling.py  register_invoice_ruleset.yaml
src/optimcp/: __init__.py  builder.py  classical.py  result.py  schemas.py  server.py  solve.py  spec.py  verify.py
src/optimcp/adapters/: __init__.py  langchain.py
src/optimcp/check/: __init__.py  eval.py  paths.py  repair.py  result.py  rules.py
src/optimcp/daemon/: __init__.py  app.py  auth.py  cli.py  dashboard.py  rate_limit.py
src/optimcp/engines/: __init__.py  annealer.py  common.py  cpsat.py
src/optimcp/middleware/: __init__.py  client.py  langchain.py  openai_wrap.py  policy.py
src/optimcp/monitor/: __init__.py  alerts.py  hashing.py  models.py  service.py  store.py
tests/: test_adapters.py  test_builder.py  test_check.py  test_check_adapters.py  test_daemon.py  test_engines.py  test_middleware_policy.py  test_monitor_hashing.py  test_monitor_store.py  test_server.py  test_solve.py  test_spec.py  test_verify.py
