[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimcp"
version = "0.1.0"
description = "A consistency checker that can't lie about the numbers - an MCP / function-calling tool that tells AI agents exactly which rule their structured output broke"
readme = "README.md"
requires-python = ">=3.10"
license = "BUSL-1.1"
authors = [{name = "OptiMCP contributors"}]
keywords = ["mcp", "agent", "tools", "verification", "consistency", "hallucination", "function-calling", "llm"]
dependencies = [
    "ortools>=9.10",
    "dwave-samplers>=1.3",
    "dimod>=0.12",
    "mcp>=1.2.0",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/ProfessionalQwerty/OptiMCP"
Source = "https://github.com/ProfessionalQwerty/OptiMCP"
Issues = "https://github.com/ProfessionalQwerty/OptiMCP/issues"

[project.scripts]
optimcp = "optimcp.server:main"

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["optimcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
