[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimcp"
version = "0.2.0"
description = "Verification layer for AI agents — deterministic consistency checks, named rulesets, and a self-hosted always-on daemon"
readme = "README.md"
requires-python = ">=3.10"
license = "BUSL-1.1"
authors = [{name = "OptiMCP contributors"}]
keywords = ["mcp", "agent", "tools", "verification", "consistency", "monitoring", "hallucination", "function-calling", "llm"]
dependencies = [
    "ortools>=9.10",
    "dwave-samplers>=1.3",
    "dimod>=0.12",
    "mcp>=1.2.0",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/ProfessionalQwerty/OptiMCP"
Source = "https://github.com/ProfessionalQwerty/OptiMCP"
Issues = "https://github.com/ProfessionalQwerty/OptiMCP/issues"

[project.scripts]
optimcp = "optimcp.server:main"
optimcp-daemon = "optimcp.daemon.cli:main"

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
daemon = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27", "pyyaml>=6.0"]
dev = ["pytest>=7.0", "fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["optimcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
